crates/hwp-core/tests/snapshots/snapshot_tests__table_bug_page_0008.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: page_html
---
<!DOCTYPE html>
<html><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><head><title>연구회 유형 및 지원 예산</title><meta http-equiv="content-type" content="text/html; charset=utf-8"><link rel="stylesheet" type="text/css" href="table-bug_style.css"></head><body><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:20mm;top:25mm;"><div class="hcI"><div class="hls ps7" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs74">[붙임 6]</span></div><div class="hls ps7" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:5.46mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps94" style="line-height:7.06mm;white-space:nowrap;left:0.00mm;top:11.29mm;height:7.06mm;width:170.00mm;padding-left:3.53mm;"><span class="hrt cs108"><u>개인정보 수집 및 활용 동의서</u></span></div><div class="hls ps7" style="line-height:216.66mm;white-space:nowrap;left:0.00mm;top:22.58mm;height:216.66mm;width:170.00mm;"><div class="htb" style="left:0.5mm;width:170.18mm;top:0.5mm;height:216.66mm;display:inline-block;position:relative;vertical-align:middle;"><svg class="hs" viewBox="-2.5 -2.5 175.18 221.66" style="left:-2.5mm;top:-2.5mm;width:175.18mm;height:221.66mm;"><defs><pattern id="w_00" width="10" height="10" patternUnits="userSpaceOnUse"><rect width="10" height="10" fill="rgb(229,229,229)" /></pattern></defs><path fill="url(#w_00)" d="M0,0L24.28,0L24.28,63.95L0,63.95L0,0Z "></path><path fill="url(#w_00)" d="M0,63.95L24.28,63.95L24.28,91.34L0,91.34L0,63.95Z "></path><path fill="url(#w_00)" d="M0,91.34L24.28,91.34L24.28,111.08L0,111.08L0,91.34Z "></path><path fill="url(#w_00)" d="M0,111.08L24.28,111.08L24.28,147.81L0,147.81L0,111.08Z "></path><path d="M24.28,0 L24.28,147.81" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.2,0 L169.39,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.2,215.66 L169.39,215.66" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:24.28mm;height:63.95mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI" style="top:24.6mm;"><div class="hls ps103" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.88mm;width:20.67mm;"><span class="hrt cs110">개인정보의</span><span class="hrt cs111">&nbsp;</span></div><div class="hls ps103" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:5.43mm;height:3.88mm;width:20.67mm;"><span class="hrt cs111">수집 및&nbsp;</span></div><div class="hls ps103" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:10.87mm;height:3.88mm;width:20.67mm;"><span class="hrt cs111">이용목적</span></div></div></div></div><div class="hce" style="left:24.28mm;top:0mm;width:144.91mm;height:63.95mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI" style="top:2.5mm;"><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:141.31mm;"></div></div></div></div><div class="hce" style="left:0mm;top:63.95mm;width:24.28mm;height:27.39mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI" style="top:6.32mm;"><div class="hls ps103" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.88mm;width:20.67mm;"><span class="hrt cs111">개인정보</span></div><div class="hls ps103" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:5.43mm;height:3.88mm;width:20.67mm;"><span class="hrt cs111">&nbsp;제 3자&nbsp;</span></div><div class="hls ps103" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:10.87mm;height:3.88mm;width:20.67mm;"><span class="hrt cs111">제공동의</span></div></div></div></div><div class="hce" style="left:24.28mm;top:63.95mm;width:144.91mm;height:27.39mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI" style="top:2.99mm;"><div class="hls ps97" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:141.31mm;"></div></div></div></div><div class="hce" style="left:0mm;top:91.34mm;width:24.28mm;height:19.73mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI" style="top:2.49mm;"><div class="hls ps103" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.88mm;width:20.67mm;"><span class="hrt cs115">개인정보의</span><span class="hrt cs111">&nbsp;</span></div><div class="hls ps103" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:5.43mm;height:3.88mm;width:20.67mm;"><span class="hrt cs111">보유 및&nbsp;</span></div><div class="hls ps103" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:10.87mm;height:3.88mm;width:20.67mm;"><span class="hrt cs111">이용기간</span></div></div></div></div><div class="hce" style="left:24.28mm;top:91.34mm;width:144.91mm;height:19.73mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI" style="top:4.82mm;"><div class="hls ps98" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.88mm;width:141.31mm;"><span class="hrt cs112">■ 개인정보·고유 식별정보의 보유 및 이용 기간</span></div><div class="hls ps99" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:6.21mm;height:3.88mm;width:141.31mm;padding-left:2.05mm;"><span class="hrt cs112">- 1년</span></div></div></div></div><div class="hce" style="left:0mm;top:111.08mm;width:24.28mm;height:36.73mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI" style="top:2.85mm;"><div class="hls ps103" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.88mm;width:20.67mm;"><span class="hrt cs111">개인정보&nbsp;</span></div><div class="hls ps103" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:5.43mm;height:3.88mm;width:20.67mm;"><span class="hrt cs111">제공 동의&nbsp;</span></div><div class="hls ps103" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:10.87mm;height:3.88mm;width:20.67mm;"><span class="hrt cs111">거부 권리&nbsp;</span></div><div class="hls ps103" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:16.30mm;height:3.88mm;width:20.67mm;"><span class="hrt cs111">및&nbsp;</span></div><div class="hls ps103" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:21.73mm;height:3.88mm;width:20.67mm;"><span class="hrt cs111">그에 따른&nbsp;</span></div><div class="hls ps103" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:27.16mm;height:3.88mm;width:20.67mm;"><span class="hrt cs111">제약 사항</span></div></div></div></div><div class="hce" style="left:24.28mm;top:111.08mm;width:144.91mm;height:36.73mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI" style="top:4.01mm;"><div class="hls ps95" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.88mm;width:141.31mm;"><span class="hrt cs112">■ 개인정보 및 고유 식별정보의 제공 동의를 거부할 권리가 있으며, 동의하지&nbsp;</span></div><div class="hls ps95" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:6.21mm;height:3.88mm;width:141.31mm;padding-left:4.58mm;"><span class="hrt cs112">않는다면 정보를 제공하지 않습니다.&nbsp;</span></div><div class="hls ps100" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:12.24mm;height:3.53mm;width:141.31mm;"></div><div class="hls ps95" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:18.63mm;height:3.88mm;width:141.31mm;"><span class="hrt cs112">■&nbsp;</span><span class="hrt cs120">개인정보 및 고유 식별정보 미제공 시 자율(전공)동아리 안내 및 관련 내용을</span><span class="hrt cs113">&nbsp;</span></div><div class="hls ps95" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:24.84mm;height:3.88mm;width:141.31mm;padding-left:4.58mm;"><span class="hrt cs116">원활하게&nbsp;</span><span class="hrt cs112">받지 못할 수 있습니다.</span></div></div></div></div><div class="hce" style="left:0mm;top:147.81mm;width:169.19mm;height:56.63mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI" style="top:1.62mm;"><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:165.58mm;"></div><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:14.53mm;height:3.53mm;width:165.58mm;"></div><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:29.23mm;height:3.53mm;width:165.58mm;"></div><div class="hls ps7" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:32.24mm;height:4.23mm;width:165.58mm;"><span class="hrt cs121">이하 본인은 개인정보보호법 및 관련 법규에 의거하여 대덕소프트웨어마이스터고등학교&nbsp;</span><span class="hrt cs113">자</span></div><div class="hls ps7" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:39.01mm;height:4.23mm;width:165.58mm;"><span class="hrt cs113">율(전공)동아리</span><span class="hrt cs121">에서 상기 개인정보를</span><span class="hrt cs118">&nbsp;수집·이용 및 제공</span><span class="hrt cs102">·</span><span class="hrt cs118">활용하는 것에 대해 동의합니다.</span></div><div class="hls ps7" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:45.60mm;height:3.53mm;width:165.58mm;"></div><div class="hls ps22" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:49.17mm;height:4.23mm;width:165.58mm;"><span class="hrt cs91">&nbsp;      2026년        월       일 　</span></div></div></div></div><div class="hce" style="left:0mm;top:204.45mm;width:68.17mm;height:11.22mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI" style="top:4.02mm;"><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:64.57mm;"></div></div></div></div><div class="hce" style="left:68.17mm;top:204.45mm;width:101.01mm;height:11.22mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI" style="top:3.49mm;"><div class="hls ps96" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.23mm;width:97.41mm;"><span class="hrt cs91">전공 동아리 멘토                    (서명)</span></div></div></div></div></div></div></div></div><div class="hpN" style="left:105mm;top:287mm;width:9.53mm;height:3.81mm;"><span class="hrt cs0">- 8 -</span></div></div></body></html>
